@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class VaccinationCenter {
  - name
  - emailAddress
  - phoneNumber
  - faxNumber
  - websiteAddress
  - openingHours
  - closingHours
}

class Slot {
  -duration
  -nOfVaccinesPerSlot
}

class Employee {
  -id
  -name
  -email
  -phone
  -citizenCardNumber
}

class Address {
  - street
  - doorNumber
  - postalCode
  - city
}

class CenterPerformance {
  - day
  - maxSumSublist
  - startTime
  - endingTime
}

class Role {
  -designation
}

class Company {}

class CenterCoordinator {}

VaccinationCenter "1" -- "1" Slot : has >

Employee <|-- CenterCoordinator
Employee "*" -- "1" Role : has <

Company "1" -- "*" Employee : knows >
Company "1" -- "*" VaccinationCenter : knows >

Employee "*" -- "1" Address : has >
VaccinationCenter "*" -- "1" Address : has >

VaccinationCenter "1" -- "*" CenterPerformance : has >

CenterCoordinator "1" -- "1" VaccinationCenter : analyses >
CenterCoordinator "1" -- "1" VaccinationCenter : is associated to >

@enduml
